# graph-query-compiler

./: LICENSE  README.md  pyproject.toml
data/benchmark/: benchmark_simple_regimes_v1.jsonl
data/datasets/augmented/: questions_paraphrased.jsonl  train_augmented.jsonl
data/datasets/base/: questions_base.jsonl
data/datasets/splits/: train_base.jsonl  val_base.jsonl
data/intents/: structural_intents.jsonl
data/intents/cleaned/: intents_clean.jsonl  intents_rejected.jsonl
data/intents/raw/: intents_raw.jsonl
data/intents/validated/: intents_invalid.jsonl  intents_valid.jsonl
data/reports/: path_coverage_report.json
data/schema/: graph_schema.json
docs/: article_graph_query_compiler.md
src/compiler/: query_compiler.py
src/compiler/codegen/: cypher_generator.py
src/compiler/normalization/: normalizer.py
src/compiler/semantic/: semantic_pipeline.py
src/compiler/validation/: validator.py
src/config/: env_loader.py  paths.py
src/config/datasets/: generation.yaml  paraphrase_config.yaml
src/config/graph/: graph_schema.json  schema_loader.py
src/config/intents/: combinatorial.yaml  regime_types.yaml
src/dataset/: distilabel_pipeline.py
src/datasets/augmentation/: augment_train_questions.py  generate_paraphrases.py
src/datasets/generation/: distilabel_pipeline.py
src/datasets/splitting/: structural_split.py
src/fine-tuning/inference/: run_inference.py
src/fine-tuning/training/: train_qlora.py
src/fine_tuning/deployment/: merge_lora_adapters.py
src/fine_tuning/inference/: run_inference.py
src/fine_tuning/training/: train_qlora.py
src/intents/dataset/: build_structural_dataset.py
src/intents/dataset_curation/: semantic_bucket_selector.py
src/intents/generation/: combinatorial_generator.py  derive_intents.py  graph_schema_adapter.py  intent_generator.py  intent_models.py  operator_policy.py  structural_config.py
src/intents/quality/: clean_intents.py  intent_quality_filter.py  intent_quality_scorer.py
src/intents/reports/: generate_structural_reports.py  (+2 more)
src/schema/: schema_loader.py
tests/compiler/: test_schema_normalizer.py
(+22 files in other folders)
